--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.4.0",
-    "react-markdown": "^9.0.1",
-    "react-particles": "^2.12.2",
-    "react-tsparticles": "^2.12.2"
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
